--- a/CSS/Assignment/copy-kitten/index.html
+++ b/CSS/Assignment/copy-kitten/index.html
@@ -17,7 +17,7 @@
 
     <hr>
 
-    <ul>
+    <ul id="header">
       <li class="header-link"><a href="index.html">Portfolio</a></li>
       <li class="header-link"><a href="about.html">About</a></li>
       <li class="header-link"><a href="contact.html">Contact</a></li>
@@ -25,7 +25,7 @@
 
     <hr>
 
-    <div>
+    <div id="table">
       <div class="row" id="row-1">
         <a href="#" class="cell column-1 row-1" id="cell-1">1</a>
         <a href="#" class="cell column-2 row-1" id="cell-2">2</a>
